[gd_scene load_steps=9 format=3 uid="uid://ccv0bq36jial"]

[ext_resource type="Script" path="res://prefabs/porta_component.gd" id="1_83q3y"]
[ext_resource type="Texture2D" uid="uid://c2s7478ljwmk4" path="res://assets_usados/mystic_woods_free_2.1/sprites/tilesets/walls/wooden_door_b.png" id="1_e40tp"]
[ext_resource type="Texture2D" uid="uid://ssvvol66actw" path="res://assets_usados/mystic_woods_free_2.1/sprites/objects/objects.png" id="3_ryaiw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oehj3"]
size = Vector2(20, 7)

[sub_resource type="Animation" id="Animation_x2pm0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vcw1s"]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vkmkj"]
_data = {
"RESET": SubResource("Animation_x2pm0"),
"open": SubResource("Animation_vcw1s")
}

[sub_resource type="LabelSettings" id="LabelSettings_mul7t"]
line_spacing = 1.0
font_size = 3

[node name="portaComponent" type="Area2D"]
script = ExtResource("1_83q3y")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_e40tp")
hframes = 2

[node name="tapete" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.196078)
position = Vector2(0, 12)
texture = ExtResource("3_ryaiw")
region_enabled = true
region_rect = Rect2(96, 35, 20.1743, 7.00016)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_oehj3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vkmkj")
}

[node name="Label" type="Label" parent="."]
offset_left = -28.0
offset_top = -15.0
offset_right = 30.0
offset_bottom = -5.0
text = "Exit"
label_settings = SubResource("LabelSettings_mul7t")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
